# pz-sheeter

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  sheet_entry.py
.github/workflows/: build.yaml
examples/: patch.jsonc
