[tool.poetry]
name = "pz-sheeter"
version = "0.1.0"
description = "Unpacks raw texture sheet data into their original format."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
